--- a/holbegram/pubspec.yaml
+++ b/holbegram/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cloud_firestore: ^5.5.0
   firebase_database: ^11.1.6
   firebase_core: ^3.8.0
+  uuid: ^4.5.1
+  image_picker: ^1.1.2
+  image_picker_platform_interface: ^2.10.0
 
 dev_dependencies:
   flutter_test:
