add task 8 Passing Data Between Pages

--- a/holbegram/android/app/build.gradle
+++ b/holbegram/android/app/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 android {
     namespace = "com.example.holbegram"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "25.1.8937393"
 
     compileOptions {
       sourceCompatibility JavaVersion.VERSION_17
